--- a/astonicservice/src/main/webapp/app/modules/landing/login.html
+++ b/astonicservice/src/main/webapp/app/modules/landing/login.html
@@ -3,5 +3,5 @@
             <input type="password" class="form-control" ng-model="userpass" placeholder="password"></input>
             
         </div>
-    <a type="submit"  ng-click="tryLogin()" class="btn btn-primary"><i class="fa fa-sign-in"></i> Login</a>
+    <a type="submit" tabindex="1" ng-click="tryLogin()" class="btn btn-primary"><i class="fa fa-sign-in"></i> Login</a>
       </form>
