--- a/astonicservice/src/main/webapp/app/modules/operation/operation.html
+++ b/astonicservice/src/main/webapp/app/modules/operation/operation.html
@@ -51,9 +51,9 @@
                             <small class="help-block col-sm-offset-3 col-sm-9" style="display: none;"></small></div>
 
                         <div class="form-group">
-                            <label class="col-sm-3 control-label">Flow Diagram:</label>
+                            <a class="col-sm-3 control-label" ng-href="#/image"  >Flow Diagram:</a>
                             <div class="col-sm-5">
-                                <input type="text" class="form-control" ng-model="operation.flowDiagram" data-original-title="" title="">
+                                <textarea type="text" class="form-control" ng-model="operation.flowDiagram" data-original-title="" title=""></textarea>
                             </div>
                             <small class="help-block col-sm-offset-3 col-sm-9" style="display: none;"></small></div>
                         <div class="form-group">
